fix: buttons on mobile version

--- a/resources/sass/plagiarism.scss
+++ b/resources/sass/plagiarism.scss
@@ -748,7 +748,7 @@ button.radio,
             }
         }
         .buttons {
-            bottom: -16px;
+            bottom: 0;
             padding-top: 12px;
             padding-bottom: 12px;
         }
